01-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-01
spec:
  containers:
    - name: nginx
      image: nginx:1.14.2
      ports:
        - containerPort: 80
---
apiVersion: v1
kind: Pod
metadata:
  name: nginx-02
spec:
  containers:
    - name: nginx
      image: nginx:1.14.2
      ports:
        - containerPort: 80

---
##Inside a pod multiples containers
apiVersion: v1
kind: Pod
metadata:
  name: nginx-03
spec:
  containers:
    - name: nginx
      image: nginx:1.14.2
      ports:
        - containerPort: 80
    - name: redhat
      image: redhat/ubi9
