07-replicaset.yml
apiVersion: v1
kind: Pod
metadata:
  name: my-pod-2
  labels:
    app: nginx
spec:
  containers:
    - name: nginx
      image: nginx
