10-env-vars.yml
apiVersion: v1
kind: Pod
metadata:
  name: env-vars-01
spec:
  containers:
    - name: test
      image: rkalluru/learnk8s:rhel9-bare
