11-configmap.yml
apiVersion: v1
kind: Pod
metadata:
  name: config-map-01
spec:
  containers:
    - name: test
      image: rkalluru/learnk8s:rhel9-bare
