14-resources.yml
## Resource Management
#1 CPU unit is equivalent to 1 physical CPU core, or 1 virtual core,
apiVersion: v1
kind: Pod
metadata:
  name: nginx-02
spec:
  containers:
    - name: nginx
      image: nginx:1.14.2
      ports:
        - containerPort: 80
      resources:
        requests:
          cpu: 100m
          memory: 200Mi
        limits:
          cpu: 200m
          memory: 1000Mi


## cpu can be cut in milli cores, 1 cpu = 1000 millicpu (millicores)
# 0.1 is equivalent to the expression 100m
