16-quotas-with-priorityclass.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx1
spec:
  priorityClassName: low
  containers:
    - name: nginx
      image: nginx:1.19
      resources:
        requests:
          memory: "4Mi"
          cpu: "20m"
        limits:
          memory: "8Mi"
          cpu: "40m"
      ports:
        - containerPort: 80
---
apiVersion: v1
kind: Pod
metadata:
  name: nginx2
spec:
  priorityClassName: low
  containers:
    - name: nginx
      image: nginx:1.19
      resources:
        requests:
          memory: "4Mi"
          cpu: "20m"
        limits:
          memory: "8Mi"
          cpu: "40m"
      ports:
        - containerPort: 80
---
apiVersion: v1
kind: Pod
metadata:
  name: nginx3
spec:
  priorityClassName: high
  containers:
    - name: nginx
      image: nginx:1.19
      resources:
        requests:
          memory: "4Mi"
          cpu: "20m"
        limits:
          memory: "8Mi"
          cpu: "40m"
      ports:
        - containerPort: 80
