18-rbac.yml
apiVersion: v1
kind: Pod
metadata:
  name: app1
spec:
  serviceAccountName: app1
  containers:
    - name: debug
      image: rkalluru/debug
