22-hpa.yml
# There are three primary types of Kubernetes autoscaling:
# 1. Horizontal Pod Autoscaler (HPA)
# 2. Vertical Pod Autoscaler (VPA)
# 3. Cluster Autoscaler (CA)
# we will try to horizontally autoscale the  hpa-test (deployment) pod
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hpa-test
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hpa
  template:
    metadata:
      labels:
        app: hpa
    spec:
      containers:
        - name: hpa
          image: rkalluru/hpa
          imagePullPolicy: Always
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
