23-vpa.yml
# To run VPA you need to clone (to learn-kubernetes) this git repos: https://github.com/kubernetes/autoscaler.git
# cd vertical-pod-autoscaler --> hack --> ./vpa-up.sh
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vpa-test
spec:
  replicas: 2
  selector:
    matchLabels:
      app: vpa
  template:
    metadata:
      labels:
        app: vpa
    spec:
      containers:
        - name: vpa
          image: rkalluru/hpa
          imagePullPolicy: Always
          resources:
            requests:
              memory: "20Mi"
              cpu: "20m"
