28-topology-constraint.yml
# we use topology constraint to spread pods to different nodes as we want.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rs-demo
  labels:
    project: example
    app: nginx
spec:
  replicas: 4
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: topology.kubernetes.io/zone
          whenUnsatisfiable: DoNotSchedule
      containers:
        - name: nginx
          image: nginx:1.25
