31-statefulset.yml
# StatefulSet is a Kubernetes API object used to manage stateful applications, ensuring each of its Pods has a unique and persistent identity.
# here in this example will be created 3 pods. if I delete a pod, a pod will be created immediately(instantly) with the same identity of the deleted pod.
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: web
spec:
  serviceName: "nginx"
  replicas: 3  # Number of pods in the StatefulSet
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: registry.k8s.io/nginx-slim:0.24
          ports:
            - containerPort: 80
              name: web
